[package]
name = "uxyun"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = "0.12.2"
tokio = { version = "1.36.0", features = ["full"]}
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
