[package]
name = "uxyun"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.11", features = ["stream","blocking"] }
tokio = { version = "1.36.0", features = ["full"]}
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
tokio-stream = "0.1.14"
futures = "0.3.30"
